--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,10 @@
         <ul id="sidemenu">
           <li><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
+          <!--
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">portfolio</a></li>
+          -->
           <li><a href="#contact">Contact</a></li>
           <i class="fa-solid fa-square-xmark" onclick="closemenu()"></i>
         </ul>
@@ -28,6 +30,7 @@
       </div>
     </div>
   </div>
+  
   <!-- -------------about------------- -->
   <div id="about">
     <div class="container">
@@ -37,7 +40,7 @@
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">About Me</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A mollitia aliquam dolorem, doloribus expedita consectetur. Vitae voluptas possimus non nihil animi rerum, neque, ad quidem commodi iure quaerat harum expedita.</p>
+          <p>I am a dedicated fullstack developer with a passion for backend development, specializing in Java, databases, and API integration. With experience in JavaScript, React, and Docker, I enjoy solving complex problems and building scalable solutions. I thrive in both independent work and collaborative environments and am always eager to learn new technologies.</p>
           <div class="tab-titles">
             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
             <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -45,23 +48,47 @@
           </div>
           <div class="tab-contents active-tab" id="skills">
             <ul>
-              <li><span>UI?UX</span><br>Designing web app interfaces </li>
-              <li><span>web development</span><br>Designing web app interfaces </li>
-              <li><span>app development</span><br>Designing web app interfaces </li>
+              <li><span>Frontend</span><br>Web app development using JavaScript, React.</li>
+              <li><span>Backend</span><br>Building web applications using Java and springboot.</li>
+              <li><span>Databases</span><br>Designing and managing databases for web applications.</li>
             </ul>
           </div>
           <div class="tab-contents" id="experience">
             <ul>
-              <li><span>UI?UX</span><br>Designing web app interfaces </li>
-              <li><span>web development</span><br>Designing web app interfaces </li>
-              <li><span>app development</span><br>Designing web app interfaces </li>
+              <li>
+                <span>Scania, Oskarshamn</span> — <strong>Production Worker</strong><br>
+                <em>2020-2022</em><br>
+                Responsible for performing quality checks on truck cabins and fillers, ensuring compliance with company standards and quality regulations. 
+              </li>
+              <li>
+                <span>Enersize, Lund</span> — <strong>Internal Backend Developer (Internship)</strong><br>
+                <em>2023</em><br>
+                Completed a two-month internship in backend development, working with Java and database management systems to support the development of internal tools and applications.
+              </li>
+              <li>
+                <span>FarsiCommunityinUSA, Remote</span> — <strong>Assistant</strong><br>
+                <em>2024</em><br>
+                Assisted in managing an online course for Java programming, providing support to students and ensuring smooth operation of the course material and assignments.
+              </li>
             </ul>
           </div>
           <div class="tab-contents" id="education">
             <ul>
-              <li><span>2016</span><br>Designing web app interfaces </li>
-              <li><span>2016</span><br>Designing web app interfaces </li>
-              <li><span>2023</span><br>Designing web app interfaces </li>
+              <li>
+                <span>Oscarsgymnasiet, Oskarshamn</span> — <strong>Degree</strong><br>
+                <em>2020</em><br>
+                Completed high school with a focus on technical studies.
+              </li>
+              <li>
+                <span>Teknikhögskolan, Lund</span> — <strong>Degree</strong><br>
+                <em>Sep 2022 - Jun 2024</em><br>
+                Pursuing a degree in fullstack developer.
+              </li>
+              <li>
+                <span>Luleå Tekniska Universitet</span> — <strong>Course</strong><br>
+                <em>Sep 2024 - ongoing</em><br>
+                Currently enrolled in OOP in java and database.
+              </li>
             </ul>
           </div>
         </div>
@@ -69,6 +96,7 @@
     </div>
   </div>
 <!-- ----------services------------ -->
+ <!--
  <div id="services">
   <div class="container">
     <h1 class="sub-title">My Services</h1>
@@ -93,8 +121,9 @@
       </div>
     </div>
   </div>
- </div>
+ </div>-->
 <!-- ----------portfolio------------ -->
+ <!--
  <div id="portfolio">
   <div class="container">
     <h1 class="sub-title">My Work</h1>
@@ -126,6 +155,7 @@
     <a href="#" class="btn">See more</a>
   </div>
  </div>
+ -->
  <!-- ------------contact----------- -->
   <div id="contact">
     <div class="container">
@@ -135,9 +165,10 @@
           <p><i class="fa-solid fa-paper-plane"></i>Akhlagizahra49@gmail.com</p>
           <p><i class="fa-solid fa-phone"></i>0793138975</p>
           <div class="social-icons">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/zahra-akhlagi-6bb10516b/"><i class="fa-brands fa-linkedin"></i></a>
           </div>
-          <a href="../images/my-cv.pdf" download class="btn btn2">Download CV</a>
+          <a href="../images/cv_25.pdf" download class="btn btn2">Download CV</a>
+          <a href="../images/Europass JU22.pdf" download class="btn btn2">Download europass</a>
         </div>
         <div class="contact-right">
           <form name="submit-to-google-sheet">
